<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GH Ivanov (Reader)</string>
    <string name="app_id">413955592092070</string>
    <string name="action_login">Вход</string>
    <string name="action_settings">Настройки</string>
    <string name="published">Опубликовано</string>
    <string name="error_published">Ошибка публикации</string>
    <string name="cancel_published">Публикация отменена</string>
    <string name="read_on_site">Прочитать статью в интернете</string>
    <string name="error_download">Ошибка загрузки</string>
    <string name="add_to_favourite">Добавить в избранное</string>
    <string name="delete_all_favourite">Очистить избранное</string>
    <string name="remove_from_favourite">Удалить из избранного</string>
    <string name="share">Поделиться</string>
    <string name="share_facebook">Поделиться через Facebook</string>
    <string name="no_favourite">Нет избранных статей</string>

    <string name="button_yes">Очистить</string>
    <string name="button_no">Отмена</string>
    <string name="title_dialog">Подтверждение</string>
    <string name="message_dialog">Вы действительно хотите очистить избранное? Эту операцию нельзя отменить!</string>

    <string name="notification_ticker">Есть обновления новостей!</string>
    <string name="notification_title">Есть обновления!</string>
    <string name="notification_text">Нажмите для просмотра</string>

    <string name="notification_running_ticker">Запущен сервис проверки обновлений</string>
    <string name="notification_running_title">Сервис проверки обновлений</string>
    <string name="notification_running_text">Нажмите для изменения настроек</string>

    <string name="pref_notification">Оповещения</string>
    <string name="pref_notification_type">Отображение сервиса</string>
    <string name="pref_notification_vibration">Вибрация</string>
    <string name="pref_notification_led">Световой индикатор</string>
    <string name="pref_notification_sound">Звуковой сигнал</string>
    <string name="pref_notification_delay">Период обновлений</string>
    <string name="pref_notification_delay_text">Установите период попыток обновлений в минутах</string>
    <string name="pref_animation">Анимации</string>

    <string name="pref_summary_one">Проверка обновлений каждых</string>
    <string name="pref_summary_two">мин.</string>

    <string name="pref_cache_image">Кэш изображений</string>
    <string name="pref_cache_on_disk">Кэш на диск</string>
    <string name="pref_cache_in_memory">Кэш в памяти</string>

    <string name="news">Новость</string>
    <string name="title_facebook_login">Facebook login</string>

    <string name="warning_news">При загрузке данных произошла ошибка.\nПроверьте Ваше подключение к сети.</string>
    <string name="warning_favourite">Вы не добавили статей в избранное.\nПерейдите в раздел с новостями и добавьте несколько статей.</string>
    <string name="button_try_again">Повторить попытку</string>
    <string name="go_to_favourite">Перейти в избранное</string>
    <string name="go_to_news">Перейти в новости</string>
    <string name="setting_notification">Оповещения</string>
</resources>
