<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_login" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_settings"
        android:visible="true"/>

    <item
        android:id="@+id/menu_delete_all_favourite"
        android:title="@string/delete_all_favourite"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/menu_change_notification"
        android:title="@string/on_notification"
        app:showAsAction="never"/>
</menu>
